# gsplat-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: AppContext.h  Camera.h  GaussianData.h  OrbitControls.h  PLYLoader.h  Renderer.h  SplatSort.h  Utils.h
shaders/: splat.frag  splat.vert
src/: Camera.cpp  GaussianData.cpp  OrbitControls.cpp  PLYLoader.cpp  Renderer.cpp  SplatSort.cpp  main.cpp
